CMake build options - Release and Debug

--- a/STM32/STM32L476RGT6/.vscode/settings.json
+++ b/STM32/STM32L476RGT6/.vscode/settings.json
@@ -9,5 +9,9 @@
     "stm32l4xx_hal.h": "c",
     "random": "c",
     "functional": "c"
-  }
+  },
+  "cmake.buildtypes":[
+    "Debug",
+    "Release"
+  ]
 }
